fix: alignment platform-wrapper

--- a/templates/1/default.css
+++ b/templates/1/default.css
@@ -167,7 +167,7 @@ input:valid {
     border: 1px solid #fff;
 }
 
-.searchbar {
+.platform-wrapper > div > div {
     margin: 2px auto;
 }
 
