--- a/templates/2/default.css
+++ b/templates/2/default.css
@@ -142,7 +142,7 @@ input:valid {
     border: 1px solid #000;
 }
 
-.searchbar {
+.platform-wrapper > div > div {
     margin: 2px auto;
 }
 
